@@ -4,6 +4,7 @@ Changes
 0.3.3 (2019-)
 ------------------
 - fix get_dem to use CRS parameters correctly (#53)
+- add --dim option to bc2pg to support loading data with Z dimensions
 - bug fixes
 
 0.3.2 (2019-03-22)
